feat: replace JSON persistence with PostgreSQL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,13 +32,14 @@ ACCOUNT_NUMBER=123-456789-001
 PAYME_NUMBER=+852 9872 5268
 
 # Database Configuration
-# For JSON file storage (default)
-DATA_FILE=./bookings.json
+# PostgreSQL connection string is required
+DATABASE_URL=postgresql://username:password@localhost:5432/booking
 
-# For future database upgrade (optional)
-# DATABASE_URL=postgresql://user:password@localhost:5432/bookings
-# or
-# DATABASE_URL=mongodb://localhost:27017/bookings
+# Optional pool tuning
+DB_POOL_SIZE=10
+DB_SSL=false
+# Set to false to accept self-signed certificates when DB_SSL=true
+DB_SSL_REJECT_UNAUTHORIZED=false
 
 # Email Notifications (optional - for future feature)
 # SMTP_HOST=smtp.gmail.com
