Simplify admin authentication to shared password

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -47,10 +47,11 @@ DB_SSL_REJECT_UNAUTHORIZED=false
 # SMTP_USER=your-email@gmail.com
 # SMTP_PASSWORD=your-app-password
 
-# Admin Panel Security (optional - for future feature)
-# ADMIN_USERNAME=admin
-# ADMIN_PASSWORD=your-secure-password
-# JWT_SECRET=your-jwt-secret-key
+# Admin Panel Security
+# Shared password for the admin dashboard (default: 1234)
+# ADMIN_PASSWORD=super-secure-password
+# Adjust admin token lifetime if needed (milliseconds)
+# ADMIN_TOKEN_TTL_MS=3600000
 
 # Logging
 LOG_LEVEL=info
