--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Backend API for rental booking system",
   "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "echo \"No automated tests are configured for the backend\"",
-      "db:migrate": "node scripts/init-db.js"
-    },
+  "scripts": {
+    "start": "node scripts/init-db.js && node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No automated tests are configured for the backend\"",
+    "db:migrate": "node scripts/init-db.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
