--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,11 @@
     "db:migrate": "node scripts/init-db.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "pg": "^8.11.3",
-    "express-rate-limit": "^7.3.1"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.3.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
